about Thread Pools

--- a/CommandWrapper/CommandWrapper.csproj
+++ b/CommandWrapper/CommandWrapper.csproj
@@ -77,6 +77,7 @@
     <Compile Include="MVVM\Model\FoobarRunner.cs" />
     <Compile Include="MVVM\ViewModel\BasicThreadFoobarViewModel.cs" />
     <Compile Include="MVVM\ViewModel\FoobarViewModelBase.cs" />
+    <Compile Include="MVVM\ViewModel\GoTapFoobarViewModel.cs" />
     <Compile Include="MVVM\ViewModel\MainViewModel.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
